# ecommerce-fake-review-detection

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: modelling_suspicious_product_identification.md
notebooks/: data_processing_feature_importance.ipynb  visualize_results.ipynb  visualize_text_model_results.ipynb
src/: baseline_tfidf.py  burst_review_clustering.py  model_suspicious_products.py  strong_label_pipeline.py  train_indobert.py
